--- a/frontend/auth_pages/user_login.html
+++ b/frontend/auth_pages/user_login.html
@@ -23,9 +23,7 @@
       <div class="text-center">
         <div class="card-body">
           <h2 class="form-signin-heading">You Know</h2>
-          <form class="form-signin" action="" method="POST">
-
-            {% csrf_token %}
+          <form class="form-signin" action="" method="POST">{% csrf_token %}
             {% for field in form %}
             <p>
             <div class="form-outline mb-4 mx-auto" style="width: 200px;">
